--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,17 @@
     "build": "tsc"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "cors": "^2.8.5"
+    "validator": "^13.15.0"
   },
   "devDependencies": {
-    "typescript": "^4.4.3",
-    "@types/node": "^16.4.3",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
-    "@types/mysql2": "^2.2.0"
+    "@types/node": "^16.4.3",
+    "@types/validator": "^13.15.0",
+    "typescript": "^4.4.3"
   }
 }
