--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^2.2.5",
     "validator": "^13.15.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.3",
     "@types/validator": "^13.15.0",
