--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
@@ -21,6 +22,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.4.3",
     "@types/validator": "^13.15.0",
     "typescript": "^4.4.3"
