--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.9.0",
-    "framer-motion": "^12.9.2"
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
