--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "tsc && node dist/server.js",
     "start": "node dist/server.js",
     "init-db": "ts-node scripts/initDB.ts",
-    "build": "tsc"
+    "build": "tsc && node dist/scripts/initDB.js"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
