--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,8 +12,9 @@
     "noEmit": false,
     "incremental": true,
     "allowJs": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
